fix: site-heading overflow-x bug on firefox

--- a/site/css/mixins.scss
+++ b/site/css/mixins.scss
@@ -24,6 +24,7 @@
 
 @mixin cancel-link-styles {
     color: $primary-color-800;
+    text-decoration: none;
     &:visited {
         color: $primary-color-800;
     }
